# IceTeslaGlove

./: CMakeLists.txt  IceTeslaGlove.puml  README.md  ifcompaspackage.txt  package.xml
include/ice_tesla_glove/: file_importer.h  haptic_structs.h  ice_glove_math.h
src/: file_importer.cc  ice_glove_math.cc  ice_tesla_glove.cpp  ice_tesla_glove.hh  icecube_tesla_glove_profiles.csv  struct_lib.cc
tools/: icecube_tesla_glove_profiles.csv  operator_finger_pos_cal.csv
