<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>ice_tesla_glove</name>
    <version>0.0.1</version>
    <description>Support kg for ROS2 control of qbRobotics Soft Hand Research</description>
    <maintainer email="martino@uia.no">microttus</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>